[package]
name = "femboyware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use detour fork because the maintianer of the original crate is an idiotic femboy
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
winapi = { version = "^0.3", features = ["minwindef", "memoryapi", "consoleapi", "libloaderapi", "winnt", "wincon", "winuser", "processthreadsapi"] }